# bookscanner

./: .env  .gitignore  .sample.env  README.md  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  sample.env
.gitbub/workflows/: ci.yaml
.github/workflows/: cd.yaml  ci.yaml
backend/: .env.sample  .gitignore  .pre-commit-config.yaml  .sample.env  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  pre-commit-config.yaml  prod.env  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/src/: main.py
backend/src/api/dependancies/: firebase.py  google_books.py  open_library.py
backend/src/api/dependencies/: firebase.py  google_books.py  open_library.py
backend/src/api/routes/: auth.py  books.py  router.py  users.py
backend/src/config/: fastapi_settings.py  logger.py  middleware.py  tags_metadata.py
backend/src/mocks/: mock_recommendations.py
backend/src/models/books/: books.py  google_books_response.py  open_library_response.py
backend/src/models/users/: users.py
backend/src/services/books/: book_image_recognition.py  get_books_from_apis.py
backend/src/services/users/: auth.py
backend/tests/: test.py  test_example.py
frontend/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md
frontend/.devcontainer/: devcontainer.json
frontend/next-app/: .env.development  .env.production  .eslintrc.json  next.config.js  package.json  pnpm-lock.yaml
frontend/next-app/public/icons/: account_icon.tsx  arrow_right_icon.tsx  bookmarks_icon.tsx  camera_icon.tsx  close-circle_icon.tsx  history_icon.tsx  home_icon.tsx  (+3 more)
(+80 files in other folders)
